# serializer version: 1
# name: test_constant_cement_model
  tuple(
    array([6002.09606993, 5424.71418913, 5000.92516634, 4669.11234985,
         4398.05547107, 4169.90513857, 3973.54938292, 3801.61939153,
         3648.98499488, 3511.93414063, 3387.69544474, 3274.1453893 ,
         3169.62078463, 3072.79418391, 2982.58849861, 2898.11688222,
         2818.63939339,           nan,           nan,           nan]),
    array([4074.77282617, 3558.78305837, 3191.20335766, 2911.32094353,
         2688.30033554, 2504.59087053, 2349.36499327, 2215.52752978,
         2098.20508325, 1993.92094172, 1900.11567853, 1814.85426078,
         1736.63947074, 1664.28875674, 1596.85040847, 1533.54491746,
         1473.72291632,           nan,           nan,           nan]),
    array([2650.        , 2611.03947368, 2572.07894737, 2533.11842105,
         2494.15789474, 2455.19736842, 2416.23684211, 2377.27631579,
         2338.31578947, 2299.35526316, 2260.39473684, 2221.43421053,
         2182.47368421, 2143.51315789, 2104.55263158, 2065.59210526,
         2026.63157895, 1987.67105263, 1948.71052632, 1909.75      ]),
    array([15905554.58532228, 14164142.8812734 , 12862774.33772062,
         11827414.50337374, 10969444.77466076, 10237940.12277084,
          9601036.41292622,  9037499.74112386,  8532479.22909143,
          8075184.25012415,  7657528.95332229,  7273298.57802488,
          6917613.95138962,  6586574.76471726,  6277014.47366688,
          5986327.35203899,  5712343.60430258,               nan,
                       nan,               nan]),
    array([1.47298913, 1.52431719, 1.56709699, 1.60377796, 1.63599856,
         1.66490471, 1.6913291 , 1.71589806, 1.73909835, 1.76132066,
         1.78288905, 1.80408172, 1.82514612, 1.84631073, 1.86779456,
         1.88981545, 1.91259793,        nan,        nan,        nan]),
  )
# ---
# name: test_constant_cement_model_dry
  tuple(
    array([3.68000000e+10, 3.03797554e+10, 2.56558353e+10, 2.20343990e+10,
         1.91698259e+10, 1.68472930e+10, 1.49262491e+10, 1.33108705e+10,
         1.19335799e+10, 1.07453529e+10, 9.70976021e+09, 8.79916668e+09,
         7.99222876e+09, 7.27220043e+09, 6.62575853e+09, 6.04217075e+09,
         5.51269505e+09,            nan,            nan,            nan]),
    array([4.40000000e+10, 3.30686501e+10, 2.61934832e+10, 2.14701789e+10,
         1.80251761e+10, 1.54013928e+10, 1.33364576e+10, 1.16690087e+10,
         1.02943524e+10, 9.14159437e+09, 8.16101865e+09, 7.31672895e+09,
         6.58215873e+09, 5.93722507e+09, 5.36646447e+09, 4.85777692e+09,
         4.40155851e+09,            nan,            nan,            nan]),
  )
# ---
# name: test_constant_cement_model_high_phi
  tuple(
    array([6002.09606993, 5517.16635367, 5138.95987693, 4830.40126038,
         4570.53247476, 4346.43840028, 4149.63015693, 3974.2420443 ,
         3816.0558889 , 3671.93768488, 3539.49464698, 3416.85707027,
         3302.53433077, 3195.31675133, 3094.20684151,           nan,
                   nan,           nan,           nan,           nan]),
    array([4074.77282617, 3642.2700477 , 3312.72327589, 3049.73724439,
         2832.6624761 , 2648.78663012, 2489.79097356, 2349.9662561 ,
         2225.24054724, 2112.61539818, 2009.82180446, 1915.10121368,
         1827.06099962, 1744.57600786, 1666.71952683,           nan,
                   nan,           nan,           nan,           nan]),
    array([2650.        , 2615.36842105, 2580.73684211, 2546.10526316,
         2511.47368421, 2476.84210526, 2442.21052632, 2407.57894737,
         2372.94736842, 2338.31578947, 2303.68421053, 2269.05263158,
         2234.42105263, 2199.78947368, 2165.15789474, 2130.52631579,
         2095.89473684, 2061.26315789, 2026.63157895, 1992.        ]),
    array([15905554.58532228, 14429422.65507741, 13262303.08450445,
         12298710.07220736, 11478772.03318825, 10765441.63773703,
         10134270.44956868,  9568301.47761063,  9055299.77930924,
          8586149.86652118,  8153877.93149508,  7753028.52701838,
          7379252.2357097 ,  7029024.1546632 ,  6699446.37084621,
                       nan,               nan,               nan,
                       nan,               nan]),
    array([1.47298913, 1.51476038, 1.55127955, 1.58387457, 1.61351114,
         1.64091677, 1.66665805, 1.69119111, 1.7148959 , 1.73810041,
         1.76109874, 1.78416527, 1.80756654, 1.83157211, 1.85646523,
                nan,        nan,        nan,        nan,        nan]),
  )
# ---
# name: test_constant_cement_model_high_phi_extrapolate
  tuple(
    array([6002.09606993, 5517.16635367, 5138.95987693, 4830.40126038,
         4570.53247476, 4346.43840028, 4149.63015693, 3974.2420443 ,
         3816.0558889 , 3671.93768488, 3539.49464698, 3416.85707027,
         3302.53433077, 3195.31675133, 3094.20684151, 2998.36992007,
         2907.09786109, 2819.78192515, 2735.89199886, 2654.96042417]),
    array([4074.77282617, 3642.2700477 , 3312.72327589, 3049.73724439,
         2832.6624761 , 2648.78663012, 2489.79097356, 2349.9662561 ,
         2225.24054724, 2112.61539818, 2009.82180446, 1915.10121368,
         1827.06099962, 1744.57600786, 1666.71952683, 1592.7135448 ,
         1521.89189485, 1453.67210457, 1387.53310451, 1322.99675403]),
    array([2650.        , 2615.36842105, 2580.73684211, 2546.10526316,
         2511.47368421, 2476.84210526, 2442.21052632, 2407.57894737,
         2372.94736842, 2338.31578947, 2303.68421053, 2269.05263158,
         2234.42105263, 2199.78947368, 2165.15789474, 2130.52631579,
         2095.89473684, 2061.26315789, 2026.63157895, 1992.        ]),
    array([15905554.58532228, 14429422.65507741, 13262303.08450445,
         12298710.07220736, 11478772.03318825, 10765441.63773703,
         10134270.44956868,  9568301.47761063,  9055299.77930924,
          8586149.86652118,  8153877.93149508,  7753028.52701838,
          7379252.2357097 ,  7029024.1546632 ,  6699446.37084621,
          6388106.01917736,  6092971.10653451,  5812312.59559961,
          5544645.12148754,  5288681.16494775]),
    array([1.47298913, 1.51476038, 1.55127955, 1.58387457, 1.61351114,
         1.64091677, 1.66665805, 1.69119111, 1.7148959 , 1.73810041,
         1.76109874, 1.78416527, 1.80756654, 1.83157211, 1.85646523,
         1.88255442, 1.91018683, 1.93976476, 1.97176701, 2.00677773]),
  )
# ---
